# autotool-studio

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/desktop/: package-lock.json  package.json
apps/desktop/src/: main.ts  preload.ts
apps/renderer/: index.html  package.json  prototype.html
apps/renderer/src/: App.tsx  index.css
config/: flowgram_nodes.json
config/templates/: default.yaml
data/: README.md  api-server.err  automation.db
examples/workflows/: demo_flowgram.json  demo_steps.json
plugins/example_plugin/: plugin.json  plugin.py
scripts/: package.py  run_cli.py  validate_workflow.py
src/autotool_system/: __init__.py  __main__.py  cli.py
src/autotool_system/api/: server.py  state.py
src/autotool_system/automation/: __init__.py  action.py  automation_engine.py  screen_control.py  window_manager.py
src/autotool_system/core/: __init__.py  recorder.py  replayer.py  rule_engine.py  safety.py  workflow_builder.py
src/autotool_system/listeners/: __init__.py  event.py  event_dispatcher.py  keyboard_listener.py  mouse_listener.py
src/autotool_system/plugins/: __init__.py  plugin_manager.py
src/autotool_system/ui/: __init__.py  config_panel.py  flowgram_launcher.py  (+2 more)
tests/: test_api_server.py  test_automation_engine.py  test_cli.py  test_config_manager.py  test_database.py  test_flowgram_io.py  test_listeners.py  test_plugin_manager.py  test_recorder.py  test_replayer.py  test_rule_engine.py  test_safety_controller.py  test_workflow_builder.py
(+23 files in other folders)
